<resources>
    <string name="app_name">yolabor Client</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_singin">Singin</string>

    <!--MenuDrawer-->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="perfil">Profile</string>
    <string name="my_jobs">My Jobs</string>
    <string name="historico">History</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <!--Solicitud programada-->
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>

    <string name="section_format">Section : %1$d</string>
    <string name="home_item">Home</string>

    <!--JOB REQUES-->
    <string name="service">Service</string>
    <string name="ra_btn_interpretation">Interpretation</string>
    <string name="ra_btn_traslation">Traslation</string>
    <string name="type">Type</string>
    <string name="languaje">Languaje</string>
    <string name="starts">Starts</string>
    <string name="duration">Duration</string>
    <string name="horas">hrs.</string>
    <string name="location">Location</string>
    <string name="service_receiver">Service Receiver</string>
    <string name="service_giver">Service Giver</string>
    <string name="description">Description</string>
    <string name="addres_detail">Address Detail</string>
    <string name="units">Units</string>
    <string name="cost">Cost</string>
    <string name="follow_up_desp">Follow up Description</string>
    <string name="coments">Comments</string>
    <string name="scope">Scope</string>
    <string name="hours">hours</string>
    <string name="total_cost">Total Cost</string>
    <string name="paymentReference">Payment Reference</string>

    <!--Profile-->
    <string name="phone">Phone</string>
    <string name="itin">ITIN/SSN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="company">Company</string>
    <string name="parnert">Partner</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dialog_select_type_photo">Select Photo</string>
    <string name="gallery_dialog">Gallery</string>
    <string name="camera_dialog">Camera</string>
    <string name="toast_unable_to_selct_image">unable to select image</string>
    <string name="agree">Agree</string>
    <string name="dialog_register">Successful registration</string>


    <!--toolbarRequest-->
    <string name="current">Current</string>
    <string name="chat">Chat</string>
    <string name="cancel">Cancel</string>

    <string name="update_information">Update Information</string>
    <string name="create_account">Create Account</string>

    <!--Job Current-->

    <!--Feedback Strings -->
    <string name="feedbak">Feddback</string>
    <string name="support">Support</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <!--Facebook strings-->

    <string name="facebook_app_id">372758993192112</string>
    <string name="fb_login_protocol_scheme">fb372758993192112</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Others-->
    <string name="empty_slot">Empty Field</string>
    <string name="filter_worker">Filter Worker</string>
    <string name="avaliable">Available</string>
    <string name="experience">Experience</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Years</string>
    <string name="wednesday">Years</string>
    <string name="thursday">Years</string>
    <string name="friday">Years</string>
    <string name="saturday">Years</string>
    <string name="hora_ini">Years</string>
    <string name="hora_fin">Years</string>
    <string name="years">Years</string>
    <string name="sunday">Years</string>
    <string name="txt_feedback">Send us your feedback or request for help and we will answer you shory</string>



</resources>
