<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="361dp"
            android:layout_height="432dp"
            android:layout_below="@+id/appbar"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="313dp"
                    android:layout_height="31dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/service"
                            tools:layout_editor_absoluteX="29dp"
                            tools:layout_editor_absoluteY="173dp" />

                        <RadioButton
                            android:id="@+id/raBtnInterpetre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ra_btn_interpretation"
                            tools:layout_editor_absoluteX="234dp"
                            tools:layout_editor_absoluteY="164dp" />

                        <RadioButton
                            android:id="@+id/raBtnTraslate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ra_btn_traslation"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="106dp"
                            tools:layout_editor_absoluteY="164dp" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="315dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        tools:layout_editor_absoluteX="13dp" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="40dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="317dp"
                    android:layout_height="23dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:text="@string/languaje"
                        tools:layout_editor_absoluteX="16dp" />

                    <Spinner
                        android:id="@+id/spinner_languaje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="86dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="313dp"
                    android:layout_height="38dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:text="@string/starts"
                        tools:layout_editor_absoluteY="35dp" />

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="179dp"
                        android:layout_height="26dp"
                        android:background="@color/grey_10"
                        android:backgroundTint="@color/activity16InputChatBackground"
                        android:gravity="center"
                        android:text="-"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/grey_90"
                        android:textSize="12dp"
                        tools:layout_editor_absoluteY="31dp" />

                    <ImageButton
                        android:id="@+id/btn_date"
                        android:layout_width="38dp"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/ic_calendar"
                        tools:ignore="MissingConstraints,VectorDrawableCompat"
                        tools:layout_editor_absoluteY="31dp" />

                    <ImageButton
                        android:id="@+id/btn_time"
                        android:layout_width="38dp"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/ic_clock"
                        tools:ignore="MissingConstraints,VectorDrawableCompat"
                        tools:layout_editor_absoluteX="320dp"
                        tools:layout_editor_absoluteY="123dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/seekbar_hrs"
                        android:layout_width="228dp"
                        android:layout_height="22dp"
                        android:min="1"
                        android:max="8"
                        android:progress="4"
                        android:thumb="@drawable/seekbar_thumb_accent" />

                    <TextView
                        android:id="@+id/textHrs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/horas" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="skill"
                        tools:layout_editor_absoluteX="13dp" />

                    <com.thomashaertel.widget.MultiSpinner
                        android:id="@+id/spinnerMulti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="-"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="365dp"
                    android:layout_height="275dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/autComAttend"
                        style="@style/LoginSignUp5Input"
                        android:hint="@string/location"
                        tools:layout_editor_absoluteX="10dp"
                        tools:layout_editor_absoluteY="184dp" />

                    <EditText
                        android:id="@+id/serviceReceiver"
                        style="@style/LoginSignUp5Input"
                        android:hint="@string/service_receiver"
                        tools:layout_editor_absoluteY="235dp" />

                    <EditText
                        android:id="@+id/serviceGiver"
                        style="@style/LoginSignUp5Input"
                        android:hint="@string/service_giver"
                        tools:layout_editor_absoluteY="286dp" />

                    <EditText
                        android:id="@+id/description"
                        style="@style/LoginSignUp5Input"
                        android:hint="@string/description"
                        tools:layout_editor_absoluteY="337dp" />

                    <EditText
                        android:id="@+id/addressDetail"
                        style="@style/LoginSignUp5Input"
                        android:hint="@string/addres_detail"
                        tools:layout_editor_absoluteY="388dp" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnUpload"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="164dp"
                android:layout_height="48dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="Upload File"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnFilterWorker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnFilterWorker"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="164dp"
                android:layout_height="48dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="4dp"
                android:text="@string/filter_worker"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnUpload"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>